feat(student): require major onboarding, rework profile with real study data